--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
         integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
-        <link rel="shortcut icon" href="faviconamazon.webp" type="image/x-icon">
+    <link rel="shortcut icon" href="faviconamazon.webp" type="image/x-icon">
 </head>
 
 <body>
@@ -43,9 +43,9 @@
                     <div class="english">ENG</div>
                 </div>
             </div>
-           
+
             <div class="signin border">
-               <p><span>Sign In</span></p>
+                <p><span>Sign In</span></p>
                 <p class="nav-second">Account & Lists</p>
             </div>
 
@@ -62,7 +62,55 @@
         </div>
 
 
+        <div class="panel">
+            <div class="panel-all">
+                <i class="fa-solid fa-bars"></i>
+                <span>All</span>
+            </div>
+            <div class="panel-options">
+                <p>Today's Deals</p>
+                <p>Customer Service</p>
+                <p>Amazon miniTV</p>
+                <p>Amazon Pay</p>
+                <p>Coupons</p>
+            </div>
+            <div class="panel-deals border">
+                Clearence Stock
+            </div>
+        </div>
+
     </header>
+
+    <div class="hero-section">
+
+    </div>
+
+    <div class="shop-section">
+        <div class="box1 box">
+            <img src="box1-ss.png" alt="">
+        </div>
+        <div class="box2 box">
+            <img src="box2-ss.png" alt="">
+        </div>
+        <div class="box3 box">
+            <img src="box3-ss.png" alt="">
+        </div>
+        <div class="box4 box">
+            <img src="box4-ss.png" alt="">
+        </div>
+        <div class="box5 box">
+            <img src="box5-ss.png" alt="">
+        </div>
+        <div class="box6 box">
+            <img src="box6-ss.png" alt="">
+        </div>
+        <div class="box7 box">
+            <img src="box7-ss.png" alt="">
+        </div>
+        <div class="box8 box">
+            <img src="box8-ss.png" alt="">
+        </div>
+    </div>
 
 </body>
 
